studio/demo-data/hb/acf6577f400a/edit/87efcb142f626480/worktree/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_many_line_message.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
assertion_line: 286
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 8 },
    content: [
        "• Queued follow-up inputs               ",
        "  ↳ This is                             ",
        "    a message                           ",
        "    with many                           ",
        "    lines                               ",
        "    for preview                         ",
        "    …                                   ",
        "    ⌥ + ↑ edit last queued message      ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 13, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 9, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 15, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 5, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
