studio/demo-data/hb/acf6577f400a/edit/87efcb142f626480/worktree/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_multiline_pending_steer_uses_single_prefix_and_truncates.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 8 },
    content: [
        "• Messages to be submitted after next tool call ",
        "  (press esc to interrupt and send immediately) ",
        "  ↳ First line                                  ",
        "    Second line                                 ",
        "    Third line                                  ",
        "    Fourth line                                 ",
        "    Fifth line                                  ",
        "    …                                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 47, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
